Download Image and Segment

--- a/AndroidApp/app/src/main/res/layout/activity_browse_google_drive.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_browse_google_drive.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_alignParentTop="true" />
 
-    <EditText
-        android:id="@+id/doc_content_edittext"
+    <ImageView
+        android:id="@+id/iv_image"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_below="@id/file_title_edittext"
